# winpodx

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  flake.nix  install.sh  pyproject.toml  uninstall.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: appimage-publish.yml  aur-publish.yml  build-rdpwrap.yml  check-rdpwrap-updates.yml  check-windows-updates.yml  ci.yml  debs-publish.yml  obs-publish.yml  pages.yml  release.yml  rhel-publish.yml
config/oem/: README.md  VERSIONS.txt  agent-keepalive.ps1  agent-respawn.ps1  disguise-cleanup.ps1  hidden-launcher.vbs  install-resume.ps1  install-step-functions.ps1  install.bat  launch_uwp.ps1  launch_uwp.vbs  media_monitor.ps1  power-monitor.ps1  rdprrap-activate.ps1  rdprrap_version.txt  setup_rdpwrap.ps1  toggle_updates.ps1  update_rdpwrap.ps1
config/oem/agent/: agent.ps1
config/oem/rdpwrap/: SHA256SUMS.txt
config/oem/reverse-open/: register-apps.ps1  unregister-apps.ps1
config/oem/reverse-open/shim/: .gitignore  Cargo.toml  build.rs  winpodx-reverse-open-shim.ps1
config/oem/reverse-open/shim/src/: main.rs
data/: winpodx.desktop  winpodx.toml.example
data/apps/: README.md
data/apps/access-o365/: app.toml
data/apps/calc/: app.toml
data/apps/cmd/: app.toml
data/apps/excel-o365/: app.toml
data/apps/explorer/: app.toml
data/apps/mspaint/: app.toml
data/apps/notepad/: app.toml
data/apps/onenote-o365/: app.toml
data/apps/outlook-o365/: app.toml
data/apps/powerpoint-o365/: app.toml
data/apps/powershell/: app.toml
data/apps/teams/: app.toml
data/apps/vscode/: app.toml
data/apps/word-o365/: app.toml
data/debloat/: items.toml
data/locale/: windows_zones.toml
debian/: changelog  control  copyright  postinst  postrm  prerm  rules  winpodx.docs  winpodx.install
docs/: ARCHITECTURE.ko.md  ARCHITECTURE.md  CHANGELOG.ko.md  CODE_OF_CONDUCT.ko.md  COMPARISON.ko.md  COMPARISON.md  CONTRIBUTING.ko.md  FEATURES.ko.md  FEATURES.md  INSTALL.ko.md  INSTALL.md  LIFECYCLE.ko.md  LIFECYCLE.md  README.ko.md  README.md  RELEASE_TESTING.ko.md  RELEASE_TESTING.md  SECURITY.ko.md  TRANSPORT_ABC.md  USAGE.ko.md  USAGE.md
docs/design/: AGENT_FIRST_INSTALL_DESIGN.md  AGENT_V2_DESIGN.md  GUEST_SYNC_DESIGN.md  LIFECYCLE.ko.md  LIFECYCLE.md  PROVISION_UNIFY_FIDELITY_AUDIT.md  README.md  REVERSE_OPEN_DESIGN.md  ROADMAP-0.6.0.md  ROTATION_SECURITY_REVIEW_2026-05-07.md  TRANSPORT_ABC.md  USB-PASSTHROUGH-INVESTIGATION.md  install_failure.schema.json
packaging/appimage/: README.md  build.sh  bundle-system-bins.sh  slim-pyside6.sh  winpodx.yml
packaging/appimage/licenses/: README.md
packaging/appimage/recipe/: entrypoint.sh  requirements.txt  winpodx.desktop
packaging/aur/: PKGBUILD  README.md  winpodx.install
packaging/aur-git/: .SRCINFO  PKGBUILD  README.md
packaging/debian/: winpodx.dsc
packaging/obs/: README.md  _service
packaging/qemu-disguise/: Dockerfile  README.md  patch-strings.sh  ssdt-sensors.asl  wsmt.asl
packaging/rpm/: winpodx.spec
packaging/scripts/: postrm-common.sh
scripts/: gen_web_i18n.py
scripts/ci/: validate_discover_dryrun.py  verify_versions.py
scripts/windows/: debloat.ps1  discover_apps.ps1  extract_programs.ps1  find_teams.ps1  media_monitor.ps1  oem_updater.ps1  rdp_setup.reg  time_sync.ps1
scripts/windows/debloat/: ads.ps1  onedrive.ps1  scheduled_tasks.ps1  search_indexing.ps1  startup_programs.ps1  sysmain.ps1  telemetry.ps1  transparency.ps1  visual_effects.ps1  web_search.ps1  widgets.ps1
src/winpodx/: __init__.py  __main__.py
src/winpodx/backend/: _hostenv.py  base.py  docker.py  libvirt.py  manual.py  podman.py  select.py
src/winpodx/cli/: app.py  config_cmd.py  debloat_menu.py  device.py  disguise.py  doctor.py  first_run.py  guest.py  host_open.py  install_cmd.py  main.py  migrate.py  multi_session_cmd.py  pod.py  pod_install_resume.py  pod_install_status.py  setup_cmd.py  uninstall.py
src/winpodx/core/: agent.py  agent_install_state.py  agent_resync.py  app.py  checks.py  compose.py  config.py  daemon.py  debloat.py  deps_quickcheck.py  devices.py  discovery.py  disk.py  guest_disk.py  guest_sync.py  i18n.py  info.py  install_state.py  mime_map.py  pod.py  process.py  provisioner.py  rdp.py  rdpwrap.py  stats.py  storage_migration.py  updates.py  url_schemes.py  usbredir.py  windows_exec.py
src/winpodx/desktop/: autostart.py  entry.py  icons.py  menu.py  mime.py  notify.py  tray.py  tray_spawn.py  window_setup.py
src/winpodx/display/: detector.py  scaling.py
src/winpodx/gui/: _main_window_apps.py  _main_window_bringup.py  _main_window_dashboard.py  _main_window_devices.py  _main_window_header.py  _main_window_info.py  app_dialog.py  (+17 more)
tests/: conftest.py  test_agent.py  test_agent_install_state.py  test_agent_port_constant.py  test_agent_ps1_syntax.py  test_agent_resync.py  test_agent_token.py  test_app.py  test_appimage_recipe.py  test_audit5_core.py  test_backend.py  test_backend_select.py  test_btrfs.py  test_busydialog_and_layout.py  test_checks.py  test_cli_host_open.py  test_cli_issues.py  test_command_taxonomy.py  test_compose_arch.py  test_compose_network.py  test_compose_timezone.py  test_config.py  test_config_schema_version.py  test_config_set_auto.py  test_daemon.py  test_dashboard_reverse_open_toggle.py  test_debloat_catalog.py  test_debloat_menu.py  test_debloat_picker.py  test_deps_unified.py  test_desktop.py  test_device_cli.py  test_devices.py  test_devices_gui.py  test_discover_apps_ps1_syntax.py  test_discovery.py  test_disguise_cli.py  test_disk.py  test_display.py  test_doctor.py  (+64 more)
tests/test_discovery/: test_discovery.py  test_public_api.py
tests/test_rotation/: test_rotation.py  test_rotation_agent_first.py
tests/test_transport/: test_agent.py  test_base.py  test_dispatch.py  test_freerdp.py
web/: CNAME  faq.html  features.html  get-started.html  i18n.js  index.html  style.css
web/lang/: de.json  en.json  fr.json  it.json  ja.json  ko.json  translations.js  zh.json
(+61 files in other folders)
